--- a/xr-plugin/com.unity.xr.holokit/Runtime/UnitySubsystemsManifest.json
+++ b/xr-plugin/com.unity.xr.holokit/Runtime/UnitySubsystemsManifest.json
@@ -4,7 +4,9 @@
 	"libraryName": "UnityHoloKit",
 	"displays": [
 		{
-			"id": "HoloKit-Display"
+			"id": "HoloKit-Display",
+			"supportedMirrorBlitReservedModes" : ["leftEye","rightEye", "sideBySide"],
+			"disablesLegacyVr": true
 		}
 	],
 	"inputs": [
