Usable input subsystem

--- a/xr-plugin/com.unity.xr.sdk.inputsample/Editor/Unity.XR.SDK.InputSample.Editor.asmdef
+++ b/xr-plugin/com.unity.xr.sdk.inputsample/Editor/Unity.XR.SDK.InputSample.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:e40ba710768534012815d3193fa296cb",
         "GUID:f9fe0089ec81f4079af78eb2287a6163",
-        "GUID:86d2e0d128305fc4ca00f7e4c0484200"
+        "GUID:86d2e0d128305fc4ca00f7e4c0484200",
+        "GUID:dfd0ce20189d48e5b22bb4134b558f5a"
     ],
     "includePlatforms": [
         "Editor"
