--- a/xr-plugin/com.unity.xr.holokit.skeleton/Editor/Unity.XR.HoloKit.Skeleton.Editor.asmdef
+++ b/xr-plugin/com.unity.xr.holokit.skeleton/Editor/Unity.XR.HoloKit.Skeleton.Editor.asmdef
@@ -1,13 +1,13 @@
 {
-    "name": "Unity.XR.Holokit",
+    "name": "Unity.XR.HoloKit.Skeleton.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:e40ba710768534012815d3193fa296cb",
-        "GUID:92703082f92b41ba80f0d6912de66115"
+        "GUID:f9fe0089ec81f4079af78eb2287a6163",
+        "GUID:bc2dfb0673686496c8eeeb38339860fd"
     ],
     "includePlatforms": [
-        "Editor",
-        "iOS"
+        "Editor"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
