--- a/xr-plugin/com.unity.xr.holokit.skeleton/Runtime/Unity.XR.HoloKit.Skeleton.asmdef
+++ b/xr-plugin/com.unity.xr.holokit.skeleton/Runtime/Unity.XR.HoloKit.Skeleton.asmdef
@@ -1,13 +1,13 @@
 {
-    "name": "NewAssembly",
+    "name": "Unity.XR.HoloKit.Skeleton",
     "rootNamespace": "",
     "references": [
         "GUID:e40ba710768534012815d3193fa296cb",
-        "GUID:f9fe0089ec81f4079af78eb2287a6163",
-        "GUID:bc2dfb0673686496c8eeeb38339860fd"
+        "GUID:92703082f92b41ba80f0d6912de66115"
     ],
     "includePlatforms": [
-        "Editor"
+        "Editor",
+        "iOS"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
