--- a/xr-plugin/com.unity.xr.holokit.skeleton/Runtime/UnitySubsystemsManifest.json
+++ b/xr-plugin/com.unity.xr.holokit.skeleton/Runtime/UnitySubsystemsManifest.json
@@ -2,16 +2,15 @@
 	"name": "HoloKit XR Plugin",
 	"version": "1.0.0",
 	"libraryName": "UnityHoloKit",
+
 	"displays": [
 		{
-			"id": "HoloKit-Display",
-			"supportedMirrorBlitReservedModes" : ["leftEye","rightEye", "sideBySide"],
-			"disablesLegacyVr": true
+			"id": "HoloKit Display"
 		}
 	],
 	"inputs": [
 		{
-			"id": "HoloKit-Input"
+			"id": "HoloKit Input"
 		}
 	]
 }
