--- a/xr-plugin/com.unity.xr.holokit.skeleton/package.json
+++ b/xr-plugin/com.unity.xr.holokit.skeleton/package.json
@@ -1,30 +1,25 @@
 {
-    "name": "com.unity.xr.holokit.skeleton",
-    "displayName": "HoloKit XR Plugin",
-    "version": "0.1.0-preview.1",
-    "unity": "2020.2",
-    "description": "Display and input subsystem providers for HoloKit.",
-    "keywords": [
-        "holokit",
-        "ar",
-        "mr",
-        "xr",
-        "mixed", 
-        "reality",
-        "augmented",
-        "xreditorsubsystem"
-    ],
-    "author": {
-        "name": "Holo Interactive",
-        "email": "dev@holoi.com",
-        "url": "https://holoi.com"
-    },
-    "dependencies": {
-        "com.unity.modules.vr": "1.0.0",
-        "com.unity.modules.xr": "1.0.0",
-        "com.unity.ugui": "1.0.0",
-        "com.unity.xr.management": "3.2.15",
-        "com.unity.xr.interactionsubsystems": "1.0.1",
-        "com.unity.xr.arsubsystems": "4.0.9"
-    }
+  "name": "com.unity.xr.holokit.skeleton",
+  "displayName": "HoloKit XR Plugin",
+  "version": "0.1.0-preview.1",
+  "unity": "2020.2",
+  "description": "Display and input subsystem providers for HoloKit.",
+  "keywords": [
+    "holokit",
+    "ar",
+    "mr",
+    "xr",
+    "mixed",
+    "reality",
+    "augmented",
+    "xreditorsubsystem"
+  ],
+  "author": {
+    "name": "Holo Interactive",
+    "email": "dev@holoi.com",
+    "url": "https://holoi.com"
+  },
+  "dependencies": {
+    "com.unity.xr.management": "3.2.15"
+  }
 }
