--- a/xr-plugin/com.unity.xr.holokit.skeleton/Editor/Unity.XR.HoloKit.Skeleton.Editor.asmdef
+++ b/xr-plugin/com.unity.xr.holokit.skeleton/Editor/Unity.XR.HoloKit.Skeleton.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:e40ba710768534012815d3193fa296cb",
         "GUID:f9fe0089ec81f4079af78eb2287a6163",
-        "GUID:bc2dfb0673686496c8eeeb38339860fd"
+        "GUID:bc2dfb0673686496c8eeeb38339860fd",
+        "GUID:dfd0ce20189d48e5b22bb4134b558f5a"
     ],
     "includePlatforms": [
         "Editor"
