--- a/xr-plugin/com.unity.xr.holokit.skeleton/Runtime/Unity.XR.HoloKit.Skeleton.asmdef
+++ b/xr-plugin/com.unity.xr.holokit.skeleton/Runtime/Unity.XR.HoloKit.Skeleton.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:e40ba710768534012815d3193fa296cb",
-        "GUID:92703082f92b41ba80f0d6912de66115"
+        "GUID:92703082f92b41ba80f0d6912de66115",
+        "GUID:dfd0ce20189d48e5b22bb4134b558f5a"
     ],
     "includePlatforms": [
         "Editor",
