--- a/xr-plugin/com.unity.xr.holokit/Runtime/Unity.XR.HoloKit.asmdef
+++ b/xr-plugin/com.unity.xr.holokit/Runtime/Unity.XR.HoloKit.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Unity.XR.HoloKit.Skeleton",
+    "name": "Unity.XR.HoloKit",
     "rootNamespace": "",
     "references": [
         "GUID:e40ba710768534012815d3193fa296cb",
