--- a/xr-plugin/com.unity.xr.holokit/package.json
+++ b/xr-plugin/com.unity.xr.holokit/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "com.unity.xr.management": "4.0.1",
     "com.unity.xr.arfoundation": "4.1.7",
-    "com.unity.xr.arkit": "4.1.7"
+    "com.unity.xr.arkit": "4.1.7",
+    "com.unity.render-pipelines.universal": "11.0.0",
+    "com.unity.visualeffectgraph": "11.0.0"
   }
 }
