--- a/xr-plugin/com.unity.xr.holokit/package.json
+++ b/xr-plugin/com.unity.xr.holokit/package.json
@@ -24,8 +24,6 @@
     "com.unity.xr.arfoundation": "4.1.7",
     "com.unity.xr.arkit": "4.1.7",
     "com.unity.render-pipelines.universal": "11.0.0",
-    "com.unity.visualeffectgraph": "11.0.0",
-    "com.unity.ui": "1.0.0-preview.14",
-    "com.lupidan.apple-signin-unity": "https://github.com/lupidan/apple-signin-unity.git#v1.4.1"
+    "com.unity.visualeffectgraph": "11.0.0"
   }
 }
