--- a/xr-plugin/com.unity.xr.holokit/Runtime/Unity.XR.HoloKit.asmdef
+++ b/xr-plugin/com.unity.xr.holokit/Runtime/Unity.XR.HoloKit.asmdef
@@ -6,7 +6,8 @@
         "GUID:92703082f92b41ba80f0d6912de66115",
         "GUID:dfd0ce20189d48e5b22bb4134b558f5a",
         "GUID:a9420e37d7990b54abdef6688edbe313",
-        "GUID:15fc0a57446b3144c949da3e2b9737a9"
+        "GUID:15fc0a57446b3144c949da3e2b9737a9",
+        "GUID:1491147abca9d7d4bb7105af628b223e"
     ],
     "includePlatforms": [
         "Editor",
