--- a/xr-plugin/com.unity.xr.holokit/package.json
+++ b/xr-plugin/com.unity.xr.holokit/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.xr.holokit",
   "displayName": "HoloKit XR Plugin",
-  "version": "1.0.0-preview.1",
+  "version": "1.0.0",
   "unity": "2021.2",
   "description": "HoloKit SDK.",
   "keywords": [
@@ -20,10 +20,12 @@
     "url": "https://holoi.com"
   },
   "dependencies": {
-    "com.unity.xr.management": "4.0.6",
-    "com.unity.xr.arfoundation": "4.1.7",
-    "com.unity.xr.arkit": "4.1.7",
-    "com.unity.render-pipelines.universal": "12.0.0",
-    "com.unity.visualeffectgraph": "12.0.0"
-  }
+    "com.unity.xr.management": "4.0.7",
+    "com.unity.xr.arfoundation": "4.2.1",
+    "com.unity.xr.arkit": "4.2.1",
+    "com.unity.render-pipelines.universal": "12.1.1",
+    "com.unity.visualeffectgraph": "12.1.1",
+    "com.unity.netcode.gameobjects": "1.0.0-pre.3"
+  },
+  "hideInEditor": false
 }
