--- a/xr-plugin/com.holoi.xr.holokit/Editor/HoloKit.Editor.asmdef
+++ b/xr-plugin/com.holoi.xr.holokit/Editor/HoloKit.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Holoi.XR.HoloKit.Editor",
+    "name": "HoloKit.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:e40ba710768534012815d3193fa296cb",
