--- a/xr-plugin/com.holoi.xr.holokit/package.json
+++ b/xr-plugin/com.holoi.xr.holokit/package.json
@@ -2,8 +2,8 @@
   "name": "com.holoi.xr.holokit",
   "displayName": "HoloKit SDK",
   "version": "1.0.0",
-  "unity": "2021.2",
-  "description": "Provides stereoscopic rendering and several Apple native integrations for development of Unity projects on HoloKit.\n\nIncludes the following features:\n-Stereoscopic Rendering\n-Apple Vision Hand Tracking\n-Lite Hand Tracking using Human Segmentation\n-Multiplayer AR with Netcode for GameObjects and MultipeerConnectivity Transrport Layer\n-AR World Map Synchronization using MultipeerConnectivity\n-Realtime AR Collaboration using MultipeerConnectivty\n-NFC Authentication\n-Apple Core Location\n-Apple Core Motion\n-Apple Watch as Controller\n\nHoloKit SDK is compatible with ARFoundation.",
+  "unity": "2021.3",
+  "description": "Provides stereoscopic rendering and several Apple native integrations for development of Unity projects on HoloKit.\n\nIncludes the following features:\n-Stereoscopic Rendering\n-Apple Vision Hand Tracking\n-Lite Hand Tracking using Human Segmentation\n-NFC Authentication\n\nHoloKit SDK is compatible with ARFoundation.",
   "keywords": [
     "holokit",
     "ar",
