Pasted package from holokit app

--- a/xr-plugin/com.holoi.xr.holokit/Editor/HoloKit.Editor.asmdef
+++ b/xr-plugin/com.holoi.xr.holokit/Editor/HoloKit.Editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "HoloKit.Editor",
-    "rootNamespace": "",
+    "rootNamespace": "HoloKit.Editor",
     "references": [
         "GUID:e40ba710768534012815d3193fa296cb",
         "GUID:f9fe0089ec81f4079af78eb2287a6163",
