--- a/xr-plugin/com.holoi.holokit/package.json
+++ b/xr-plugin/com.holoi.holokit/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "com.holoi.xr.holokit",
+  "name": "com.holoi.holokit",
   "displayName": "HoloKit SDK",
   "version": "1.0.0",
   "unity": "2021.3",
-  "description": "Provides stereoscopic rendering and several Apple native integrations for development of Unity projects on HoloKit.\n\nIncludes the following features:\n-Stereoscopic Rendering\n-Apple Vision Hand Tracking\n-Lite Hand Tracking using Human Segmentation\n-NFC Authentication\n\nHoloKit SDK is compatible with ARFoundation.",
+  "description": "Provides stereoscopic rendering and hand tracking interaction for development of Unity projects on HoloKit.\nHoloKit SDK is compatible with ARFoundation.",
   "keywords": [
     "holokit",
     "ar",
     "mr",
-    "xr",
-    "mixed",
-    "reality",
-    "augmented",
-    "xreditorsubsystem"
+    "xr"
   ],
   "author": {
     "name": "Holo Interactive",
@@ -36,15 +32,10 @@
       "displayName": "Hand Tracking",
       "description": "Contains sample code on how to setup Apple Vision hand tracking (this algorithm is extremyly energy consuming and not recommended for long time usage)",
       "path": "Samples~/SamplesHandTracking"
-    },
-    {
-      "displayName": "Lite Hand Tracking",
-      "description": "Contains sample code on how to setup an alternative low energy comsuming but less precise hand tracking algorithm",
-      "path": "Samples~/SamplesLiteHandTracking"
     }
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/holoi/com.holoi.xr.holokit.git"
-  }
+  // "repository": {
+  //   "type": "git",
+  //   "url": "https://github.com/holoi/com.holoi.xr.holokit.git"
+  // }
 }
