--- a/xr-plugin/com.holoi.holokit/package.json
+++ b/xr-plugin/com.holoi.holokit/package.json
@@ -3,7 +3,7 @@
   "displayName": "HoloKit SDK",
   "version": "1.0.0",
   "unity": "2021.3",
-  "description": "Provides stereoscopic rendering and hand tracking interaction for development of Unity projects on HoloKit.\nHoloKit SDK is compatible with ARFoundation.",
+  "description": "Provides stereoscopic rendering and hand tracking for the development of HoloKit applications.\n\nHoloKit SDK is compatible with ARFoundation.",
   "keywords": [
     "holokit",
     "ar",
@@ -18,20 +18,20 @@
   "dependencies": {
     "com.unity.xr.arfoundation": "5.0.0-pre.13",
     "com.unity.xr.arkit": "5.0.0-pre.13",
-    "com.unity.xr.management": "4.2.0",
-    "com.unity.render-pipelines.universal": "12.1.7"
+    "com.unity.xr.management": "4.2.1",
+    "com.unity.render-pipelines.universal": "12.1.8"
   },
   "hideInEditor": false,
   "samples": [
     {
       "displayName": "Stereoscopic Rendering",
-      "description": "Contains sample code on how to setup stereoscopic rendering",
-      "path": "Samples~/SamplesStAR"
+      "description": "Contains sample project on how to setup a basic stereoscopic rendering scene",
+      "path": "Samples~/StereoscopicRendering"
     },
     {
       "displayName": "Hand Tracking",
-      "description": "Contains sample code on how to setup Apple Vision hand tracking (this algorithm is extremyly energy consuming and not recommended for long time usage)",
-      "path": "Samples~/SamplesHandTracking"
+      "description": "Contains sample project on how to setup a basic hand tracking scene",
+      "path": "Samples~/HandTracking"
     }
   ]
 }
