--- a/xr-plugin/com.holoi.holokit/package.json
+++ b/xr-plugin/com.holoi.holokit/package.json
@@ -32,6 +32,11 @@
       "displayName": "Hand Tracking",
       "description": "Contains sample project on how to setup a basic hand tracking scene",
       "path": "Samples~/SamplesHandTracking"
+    },
+    {
+      "displayName": "Advanced Hand Tracking",
+      "description": "Contains sample project on demonstrating a common use case of hand tracking",
+      "path": "Samples~/SamplesAdvancedHandTracking"
     }
   ]
 }
