--- a/xr-plugin/com.holoi.xr.holokit/package.json
+++ b/xr-plugin/com.holoi.xr.holokit/package.json
@@ -2,7 +2,7 @@
   "name": "com.holoi.xr.holokit",
   "displayName": "HoloKit SDK",
   "version": "1.0.0",
-  "unity": "2021.3",
+  "unity": "2022.3",
   "description": "Provides stereoscopic rendering and several Apple native integrations for development of Unity projects on HoloKit.\n\nIncludes the following features:\n-Stereoscopic Rendering\n-Apple Vision Hand Tracking\n-Lite Hand Tracking using Human Segmentation\n-NFC Authentication\n\nHoloKit SDK is compatible with ARFoundation.",
   "keywords": [
     "holokit",
@@ -16,14 +16,14 @@
   ],
   "author": {
     "name": "Holo Interactive",
-    "email": "yuchen@holoi.com",
+    "email": "dev@holoi.com",
     "url": "https://holoi.com"
   },
   "dependencies": {
-    "com.unity.xr.arfoundation": "5.0.0-pre.13",
-    "com.unity.xr.arkit": "5.0.0-pre.13",
-    "com.unity.xr.management": "4.2.0",
-    "com.unity.render-pipelines.universal": "12.1.7"
+    "com.unity.xr.arfoundation": "5.1.0",
+    "com.unity.xr.arkit": "5.1.0",
+    "com.unity.xr.management": "4.2.1",
+    "com.unity.render-pipelines.universal": "14.0.9"
   },
   "hideInEditor": false,
   "samples": [
@@ -45,6 +45,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/holoi/com.holoi.xr.holokit.git"
+    "url": "https://github.com/holoi/holokit-sdk.git"
   }
 }
