--- a/xr-plugin/com.holoi.xr.holokit/package.json
+++ b/xr-plugin/com.holoi.xr.holokit/package.json
@@ -22,8 +22,7 @@
   "dependencies": {
     "com.unity.xr.arfoundation": "5.1.0",
     "com.unity.xr.arkit": "5.1.0",
-    "com.unity.xr.management": "4.2.1",
-    "com.unity.render-pipelines.universal": "14.0.9"
+    "com.unity.xr.management": "4.2.1"
   },
   "hideInEditor": false,
   "samples": [
