--- a/xr-plugin/com.holoi.xr.holokit/package.json
+++ b/xr-plugin/com.holoi.xr.holokit/package.json
@@ -22,19 +22,19 @@
   "dependencies": {
     "com.unity.xr.arfoundation": "5.1.0",
     "com.unity.xr.arkit": "5.1.0",
-    "com.unity.xr.management": "4.2.1"
+    "com.unity.xr.management": "4.4.0"
   },
   "hideInEditor": false,
   "samples": [
     {
       "displayName": "Stereoscopic Rendering",
       "description": "Contains sample code on how to setup stereoscopic rendering",
-      "path": "Samples~/SamplesStAR"
+      "path": "Samples~/StereoRerendering"
     },
     {
       "displayName": "Hand Tracking",
       "description": "Contains sample code on how to setup Apple Vision hand tracking (this algorithm is extremyly energy consuming and not recommended for long time usage)",
-      "path": "Samples~/SamplesHandTracking"
+      "path": "Samples~/HandTracking"
     },
     {
       "displayName": "Lite Hand Tracking",
