--- a/Packages/com.holoi.xr.holokit/package.json
+++ b/Packages/com.holoi.xr.holokit/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "com.unity.xr.arfoundation": "5.1.1",
     "com.unity.xr.arkit": "5.1.1",
-    "com.unity.xr.management": "4.4.0"
+    "com.unity.xr.management": "4.4.0",
+    "com.unity.xr.hands": "1.3.0",
+    "com.unity.xr.interaction.toolkit": "2.5.2"
   },
   "hideInEditor": false,
   "samples": [
@@ -44,7 +46,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/holoi/holokit-sdk.git"
+    "url": "https://github.com/holokit/holokit-unity-sdk.git"
   },
   "_upm": {
     "supportedPlatforms": [
