--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,14 @@
 {
   "dependencies": {
+    "com.csound.csoundunity": "3.4.0",
     "com.unity.collab-proxy": "2.2.0",
-    "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.render-pipelines.universal": "16.0.4",
     "com.unity.test-framework": "1.3.9",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualeffectgraph": "16.0.4",
-    "com.unity.xr.arfoundation": "5.1.0",
-    "com.unity.xr.arkit": "5.1.0",
+    "com.unity.xr.arfoundation": "5.1.1",
     "com.unity.xr.hands": "1.3.0",
     "com.unity.xr.interaction.toolkit": "2.5.2",
     "com.unity.modules.accessibility": "1.0.0",
@@ -43,5 +42,17 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.csound.csoundunity",
+        "com.de-panther.webxr",
+        "com.de-panther.webxr-interactions",
+        "com.openupm"
+      ]
+    }
+  ]
 }
