--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.netcode.gameobjects": "1.7.1",
     "com.unity.render-pipelines.universal": "16.0.4",
     "com.unity.test-framework": "1.3.9",
-    "com.unity.timeline": "1.8.6",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.7.6",
     "com.unity.visualeffectgraph": "16.0.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
